svn path=/trunk/; revision=453

--- a/Source/ZEPhysics/CMakeLists.txt
+++ b/Source/ZEPhysics/CMakeLists.txt
@@ -39,18 +39,18 @@ add_subdirectory (ZEPhysX)
 
 add_source (ZEPhysicalCallbacks.cpp			Sources)
 add_source (ZEPhysicalCallbacks.h			Sources ZESDK)
+add_source (ZEPhysicalJoint.cpp				Sources)
+add_source (ZEPhysicalJoint.h				Sources ZESDK)
 add_source (ZEPhysicalMaterial.cpp			Sources)
 add_source (ZEPhysicalMaterial.h			Sources ZESDK)
+add_source (ZEPhysicalMesh.cpp				Sources)
+add_source (ZEPhysicalMesh.h				Sources ZESDK)
 add_source (ZEPhysicalObject.cpp			Sources)
 add_source (ZEPhysicalObject.h				Sources ZESDK)
 add_source (ZEPhysicalRigidBody.cpp			Sources)
 add_source (ZEPhysicalRigidBody.h			Sources ZESDK)
 add_source (ZEPhysicalShapes.cpp			Sources)
 add_source (ZEPhysicalShapes.h				Sources ZESDK)
-add_source (ZEPhysicalStaticMesh.cpp		Sources)
-add_source (ZEPhysicalStaticMesh.h			Sources ZESDK)
-add_source (ZEPhysicalStaticRigidBody.cpp	Sources)
-add_source (ZEPhysicalStaticRigidBody.h		Sources ZESDK)
 add_source (ZEPhysicalTrigger.cpp			Sources)
 add_source (ZEPhysicalTrigger.h				Sources ZESDK)
 add_source (ZEPhysicalWorld.cpp				Sources)
