--- a/Source/ZEPhysics/ZEPhysX/CMakeLists.txt
+++ b/Source/ZEPhysics/ZEPhysX/CMakeLists.txt
@@ -45,12 +45,12 @@ add_source (ZEPhysXModule.cpp					Sources)
 add_source (ZEPhysXModule.h						Sources)
 add_source (ZEPhysXModuleDescription.cpp		Sources)
 add_source (ZEPhysXModuleDescription.h			Sources)
+add_source (ZEPhysXPhysicalJoint.cpp			Sources)
+add_source (ZEPhysXPhysicalJoint.h				Sources)
+add_source (ZEPhysXPhysicalMesh.cpp				Sources)
+add_source (ZEPhysXPhysicalMesh.h				Sources)
 add_source (ZEPhysXPhysicalRigidBody.cpp		Sources)
 add_source (ZEPhysXPhysicalRigidBody.h			Sources)
-add_source (ZEPhysXPhysicalStaticMesh.cpp		Sources)
-add_source (ZEPhysXPhysicalStaticMesh.h			Sources)
-add_source (ZEPhysXPhysicalStaticRigidBody.cpp	Sources)
-add_source (ZEPhysXPhysicalStaticRigidBody.h	Sources)
 add_source (ZEPhysXPhysicalWorld.cpp			Sources)
 add_source (ZEPhysXPhysicalWorld.h				Sources)
 add_source (ZEPhysXStream.cpp					Sources)
