--- a/Source/ZEGame/CMakeLists.txt
+++ b/Source/ZEGame/CMakeLists.txt
@@ -74,5 +74,8 @@ add_source (ZETrigger.h				Sources ZESDK)
 
 add_library (ZEGame ${Sources})
 
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+set_property(TARGET ZEGame PROPERTY FOLDER "Zinek Engine")
+
 install (TARGETS ZEGame COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
 install (FILES ${ZESDK}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Include/ZEGame)
