--- a/Source/ZEGraphics/ZEPostProcessor/CMakeLists.txt
+++ b/Source/ZEGraphics/ZEPostProcessor/CMakeLists.txt
@@ -59,3 +59,6 @@ add_source (ZEPPVelocityInputNode.cpp	Sources)
 add_source (ZEPPVelocityInputNode.h		Sources ZESDK)
 
 add_library (ZEPostProcessor ${Sources})
+
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+set_property(TARGET ZEPostProcessor PROPERTY FOLDER "Zinek Engine")
