--- a/Source/ZEInput/ZEVirtualInput/CMakeLists.txt
+++ b/Source/ZEInput/ZEVirtualInput/CMakeLists.txt
@@ -41,3 +41,6 @@ add_source(ZEVirtualInputModuleDescription.cpp	Sources)
 add_source(ZEVirtualInputModuleDescription.h	Sources ZESDK)
 
 add_library(ZEVirtualInput ${Sources})
+
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+set_property(TARGET ZEVirtualInput PROPERTY FOLDER "Zinek Engine")
