--- a/Source/ZEParticle/CMakeLists.txt
+++ b/Source/ZEParticle/CMakeLists.txt
@@ -50,3 +50,6 @@ add_library (ZEParticle ${Sources})
 
 install (TARGETS ZEParticle COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
 install (FILES ${ZESDK}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Include/ZEParticle)
+
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+set_property(TARGET ZEParticle PROPERTY FOLDER "Zinek Engine")
