--- a/Source/ZEDS/CMakeLists.txt
+++ b/Source/ZEDS/CMakeLists.txt
@@ -54,5 +54,8 @@ add_source (ZEVariant.h				Sources ZESDK)
 
 add_library (ZEDS ${Sources})
 
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+set_property(TARGET ZEDS PROPERTY FOLDER "Zinek Engine")
+
 install (TARGETS ZEDS COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
 install (FILES ${ZESDK}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Include/ZEDS)
