svn path=/trunk/; revision=456

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,7 +73,7 @@ source_group (ZPP REGULAR_EXPRESSION ".*\\.zpp")
 ## Files
 #########################################################################################
 add_subdirectory (Source)
-
+add_subdirectory (ZEToolSDK)
 
 ## PACKING
 #########################################################################################
