--- a/Source/ZEGame/CMakeLists.txt
+++ b/Source/ZEGame/CMakeLists.txt
@@ -61,6 +61,8 @@ add_source (ZEPortal.cpp			Sources)
 add_source (ZEPortal.h				Sources ZESDK)
 add_source (ZEPresentationSlide.cpp	Sources)
 add_source (ZEPresentationSlide.h	Sources ZESDK)
+add_source (ZERayCaster.cpp			Sources)
+add_source (ZERayCaster.h			Sources ZESDK)
 add_source (ZEScene.cpp				Sources)
 add_source (ZEScene.h				Sources ZESDK)
 add_source (ZESceneDebugDraw.cpp	Sources)
