svn path=/trunk/; revision=462

--- a/Source/ZEGame/CMakeLists.txt
+++ b/Source/ZEGame/CMakeLists.txt
@@ -36,17 +36,17 @@
 cmake_minimum_required (VERSION 2.8)
 
 add_source (ZECanvasBrush.cpp		Sources)
-add_source (ZECanvasBrush.h			Sources ZESDK)
+add_source (ZECanvasBrush.h			Sources ZESDK ZEPP)
 add_source (ZECharacter.cpp			Sources)
-add_source (ZECharacter.h			Sources ZESDK)
+add_source (ZECharacter.h			Sources ZESDK ZEPP)
 add_source (ZEComponent.cpp			Sources)
-add_source (ZEComponent.h			Sources ZESDK)
+add_source (ZEComponent.h			Sources ZESDK ZEPP)
 add_source (ZECompoundEntity.cpp	Sources)
-add_source (ZECompoundEntity.h		Sources ZESDK)
+add_source (ZECompoundEntity.h		Sources ZESDK ZEPP)
 add_source (ZEDrawParameters.cpp	Sources)
 add_source (ZEDrawParameters.h		Sources ZESDK)
 add_source (ZEEntity.cpp			Sources)
-add_source (ZEEntity.h				Sources ZESDK)
+add_source (ZEEntity.h				Sources ZESDK ZEPP)
 add_source (ZEEntityProvider.cpp	Sources)
 add_source (ZEEntityProvider.h		Sources ZESDK)
 add_source (ZEGame.cpp				Sources)
@@ -54,13 +54,13 @@ add_source (ZEGame.h				Sources ZESDK)
 add_source (ZEGameProvider.cpp		Sources)
 add_source (ZEGameProvider.h		Sources ZESDK)
 add_source (ZEGrid.cpp				Sources)
-add_source (ZEGrid.h				Sources	ZESDK)
+add_source (ZEGrid.h				Sources	ZESDK ZEPP)
 add_source (ZEPlayer.cpp			Sources)
-add_source (ZEPlayer.h				Sources ZESDK)
+add_source (ZEPlayer.h				Sources ZESDK ZEPP)
 add_source (ZEPortal.cpp			Sources)
 add_source (ZEPortal.h				Sources ZESDK)
 add_source (ZEPresentationSlide.cpp	Sources)
-add_source (ZEPresentationSlide.h	Sources ZESDK)
+add_source (ZEPresentationSlide.h	Sources ZESDK ZEPP)
 add_source (ZERayCaster.cpp			Sources)
 add_source (ZERayCaster.h			Sources ZESDK)
 add_source (ZEScene.cpp				Sources)
@@ -70,9 +70,9 @@ add_source (ZESceneDebugDraw.h		Sources ZESDK)
 add_source (ZESerialization.cpp		Sources)
 add_source (ZESerialization.h		Sources ZESDK)
 add_source (ZESkyBrush.cpp			Sources)
-add_source (ZESkyBrush.h			Sources ZESDK)
+add_source (ZESkyBrush.h			Sources ZESDK ZEPP)
 add_source (ZETrigger.cpp			Sources)
-add_source (ZETrigger.h				Sources ZESDK)
+add_source (ZETrigger.h				Sources ZESDK ZEPP)
 
 add_library (ZEGame ${Sources})
 
