--- a/Source/ZEGraphics/CMakeLists.txt
+++ b/Source/ZEGraphics/CMakeLists.txt
@@ -41,32 +41,32 @@ add_subdirectory(ZEPostProcessor)
 add_source (ZEBitmap.cpp					Sources)
 add_source (ZEBitmap.h						Sources ZESDK)
 add_source (ZECamera.cpp					Sources)
-add_source (ZECamera.h						Sources ZESDK)
+add_source (ZECamera.h						Sources ZESDK ZEPP)
 add_source (ZECanvas.cpp					Sources)
 add_source (ZECanvas.h 						Sources ZESDK)
 add_source (ZEDirectionalLight.cpp 			Sources)
-add_source (ZEDirectionalLight.h 			Sources ZESDK)
+add_source (ZEDirectionalLight.h 			Sources ZESDK ZEPP)
 add_source (ZEFixedMaterial.cpp 			Sources)
-add_source (ZEFixedMaterial.h 				Sources ZESDK)
+add_source (ZEFixedMaterial.h 				Sources ZESDK ZEPP)
 add_source (ZEFrameRenderer.cpp 			Sources)
 add_source (ZEFrameRenderer.h 				Sources ZESDK)
 add_source (ZEGraphicsModule.cpp 			Sources)
-add_source (ZEGraphicsModule.h 				Sources ZESDK)
+add_source (ZEGraphicsModule.h 				Sources ZESDK ZEPP)
 add_source (ZEIndexedPolygon.h 				Sources ZESDK)
 add_source (ZELight.cpp 					Sources)
-add_source (ZELight.h 						Sources ZESDK)
+add_source (ZELight.h 						Sources ZESDK ZEPP)
 add_source (ZEMaterial.cpp 					Sources)
-add_source (ZEMaterial.h 					Sources ZESDK)
+add_source (ZEMaterial.h 					Sources ZESDK ZEPP)
 add_source (ZEMaterialComponents.h 			Sources ZESDK)
 add_source (ZEMaterialFileFormat.h 			Sources)
 add_source (ZEMaterialResource.cpp 			Sources)
-add_source (ZEMaterialResource.h 			Sources ZESDK)
+add_source (ZEMaterialResource.h 			Sources ZESDK ZEPP)
 add_source (ZEOmniProjectiveLight.cpp 		Sources)
-add_source (ZEOmniProjectiveLight.h 		Sources ZESDK)
+add_source (ZEOmniProjectiveLight.h 		Sources ZESDK ZEPP)
 add_source (ZEPointLight.cpp 				Sources)
-add_source (ZEPointLight.h 					Sources ZESDK)
+add_source (ZEPointLight.h 					Sources ZESDK ZEPP)
 add_source (ZEProjectiveLight.cpp 			Sources)
-add_source (ZEProjectiveLight.h 			Sources ZESDK)
+add_source (ZEProjectiveLight.h 			Sources ZESDK ZEPP)
 add_source (ZERenderer.cpp 					Sources)
 add_source (ZERenderer.h 					Sources ZESDK)
 add_source (ZERenderOrder.cpp 				Sources)
@@ -74,9 +74,9 @@ add_source (ZERenderOrder.h 				Sources ZESDK)
 add_source (ZEShadowRenderer.cpp 			Sources)
 add_source (ZEShadowRenderer.h 				Sources ZESDK)
 add_source (ZESimpleMaterial.cpp 			Sources)
-add_source (ZESimpleMaterial.h 				Sources ZESDK)
+add_source (ZESimpleMaterial.h 				Sources ZESDK ZEPP)
 add_source (ZESkyBoxMaterial.cpp 			Sources)
-add_source (ZESkyBoxMaterial.h 				Sources ZESDK)
+add_source (ZESkyBoxMaterial.h 				Sources ZESDK ZEPP)
 add_source (ZETexture.cpp 					Sources)
 add_source (ZETexture.h 					Sources ZESDK)
 add_source (ZETexture2D.cpp 				Sources)
