--- a/Source/ZEParticle/CMakeLists.txt
+++ b/Source/ZEParticle/CMakeLists.txt
@@ -36,15 +36,15 @@
 cmake_minimum_required(VERSION 2.8)
 
 add_source (ZEParticle.cpp				Sources)
-add_source (ZEParticle.h				Sources ZESDK)
+add_source (ZEParticle.h				Sources ZESDK ZEPP)
 add_source (ZEParticleController.cpp	Sources)
-add_source (ZEParticleController.h		Sources ZESDK)
+add_source (ZEParticleController.h		Sources ZESDK ZEPP)
 add_source (ZEParticleEffect.cpp		Sources)
-add_source (ZEParticleEffect.h			Sources ZESDK)
+add_source (ZEParticleEffect.h			Sources ZESDK ZEPP)
 add_source (ZEParticleEmitter.cpp		Sources)
-add_source (ZEParticleEmitter.h			Sources ZESDK)
+add_source (ZEParticleEmitter.h			Sources ZESDK ZEPP)
 add_source (ZEParticleSystem.cpp		Sources)
-add_source (ZEParticleSystem.h			Sources ZESDK)
+add_source (ZEParticleSystem.h			Sources ZESDK ZEPP)
 
 add_library (ZEParticle ${Sources})
 
