--- a/Source/ZESound/CMakeLists.txt
+++ b/Source/ZESound/CMakeLists.txt
@@ -39,12 +39,12 @@ add_subdirectory (ZEDirectSound)
 add_subdirectory (ZEOpenAL)
 
 add_source (ZEListener.cpp				Sources)
-add_source (ZEListener.h				Sources ZESDK)
+add_source (ZEListener.h				Sources ZESDK ZEPP)
 add_source (ZESoundFX.h					Sources ZESDK)
 add_source (ZESoundModule.cpp			Sources)
 add_source (ZESoundModule.h				Sources ZESDK)
 add_source (ZESoundResource.cpp			Sources)
-add_source (ZESoundResource.h			Sources ZESDK)
+add_source (ZESoundResource.h			Sources ZESDK ZEPP)
 add_source (ZESoundResourceMP3.cpp		Sources)
 add_source (ZESoundResourceMP3.h		Sources)
 add_source (ZESoundResourceOGG.cpp		Sources)
@@ -52,9 +52,9 @@ add_source (ZESoundResourceOGG.h		Sources)
 add_source (ZESoundResourceWAV.cpp		Sources)
 add_source (ZESoundResourceWAV.h		Sources)
 add_source (ZESoundSource.cpp			Sources)
-add_source (ZESoundSource.h				Sources ZESDK)
+add_source (ZESoundSource.h				Sources ZESDK ZEPP)
 add_source (ZESoundSource3D.cpp			Sources)
-add_source (ZESoundSource3D.h			Sources ZESDK)
+add_source (ZESoundSource3D.h			Sources ZESDK ZEPP)
 
 add_library (ZESound ${Sources})
 target_link_libraries (ZESound libvorbis.lib libvorbisfile.lib libogg.lib libmpg123.lib)
