--- a/Source/ZEModel/CMakeLists.txt
+++ b/Source/ZEModel/CMakeLists.txt
@@ -44,7 +44,7 @@ add_source (ZEModelAnimationTrack.h		Sources ZESDK)
 add_source (ZEModelBone.cpp				Sources)
 add_source (ZEModelBone.h				Sources ZESDK)
 add_source (ZEModelFileFormat.cpp		Sources)
-add_source (ZEModelFileFormat.h			Sources ZESDK)
+add_source (ZEModelFileFormat.h			Sources)
 add_source (ZEModelMesh.cpp				Sources)
 add_source (ZEModelMesh.h				Sources ZESDK)
 add_source (ZEModelMeshLOD.cpp			Sources)
