svn path=/trunk/; revision=467

--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -4,7 +4,7 @@ LogFile = error.log
 
 [ModuleManager]
 GraphicsModule = Direct3D9
-InputModule = DirectInput
+InputModule = WindowsInput
 SoundModule = DirectSound
 NetworkModule = WinNetwork
 PhysicsModule = PhysX
