--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -82,9 +82,9 @@ add_executable (ZE WIN32 ${Sources})
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 set_property(TARGET ZE PROPERTY FOLDER "Zinek Engine")
 
-target_link_libraries (ZE ZECore ZEDebug ZEDS ZEGame ZEGraphics ZEInput ZEMap ZEMath ZEMeta ZEModel ZEParticle ZEPhysics ZESound ZEUI)
-target_link_libraries (ZE ZEDirect3D9 ZEDirectInput ZEDirectSound ZEOpenAL ZEPhysX ZEDummyInput ZEVirtualInput ZEPortalMap)
+target_link_libraries (ZE ZECore ZEDS ZEGame ZEGraphics ZEInput ZEMap ZEMath ZEMeta ZEModel ZEParticle ZEPhysics ZESound ZEUI)
+target_link_libraries (ZE ZEDirect3D9 ZEWindowsInput ZEDirectInput ZEDirectSound ZEOpenAL ZEPhysX ZEDummyInput ZEVirtualInput ZEPortalMap)
 
-install (TARGETS ZE RUNTIME DESTINATION bin COMPONENT "Runtime")
+install (TARGETS ZE DESTINATION bin COMPONENT "Runtime")
 install (FILES ${ZESDK}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Include)
-install (DIRECTORY ${CMAKE_SOURCE_DIR}/Dll/ CONFIGURATIONS Release ARCHIVE DESTINATION bin COMPONENT "Runtime")
+install (DIRECTORY ${CMAKE_SOURCE_DIR}/Dll/ CONFIGURATIONS Release DESTINATION bin COMPONENT "Runtime" PATTERN .svn EXCLUDE)
