--- a/Source/ZEDebug/CMakeLists.txt
+++ b/Source/ZEDebug/CMakeLists.txt
@@ -35,18 +35,18 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-add_source (ZEDebugModule.cpp					Sources)
-add_source (ZEDebugModule.h						Sources)
-add_source (ZEGraphicsDebugModule.cpp			Sources)
-add_source (ZEGraphicsDebugModule.h				Sources)
-add_source (ZEModelAnimationDebugModule.cpp		Sources)
-add_source (ZEModelAnimationDebugModule.h		Sources)
-add_source (ZEMetaDebugModule.cpp				Sources)
-add_source (ZEMetaDebugModule.h					Sources)
-add_source (ZEPhysicsDebugModule.cpp			Sources)
-add_source (ZEPhysicsDebugModule.h				Sources)
-add_source (ZESoundDebugModule.cpp				Sources)
-add_source (ZESoundDebugModule.h				Sources)
+#add_source (ZEDebugModule.cpp					Sources)
+#add_source (ZEDebugModule.h						Sources)
+#add_source (ZEGraphicsDebugModule.cpp			Sources)
+#add_source (ZEGraphicsDebugModule.h				Sources)
+#add_source (ZEModelAnimationDebugModule.cpp		Sources)
+#add_source (ZEModelAnimationDebugModule.h		Sources)
+#add_source (ZEMetaDebugModule.cpp				Sources)
+#add_source (ZEMetaDebugModule.h					Sources)
+#add_source (ZEPhysicsDebugModule.cpp			Sources)
+#add_source (ZEPhysicsDebugModule.h				Sources)
+#add_source (ZESoundDebugModule.cpp				Sources)
+#add_source (ZESoundDebugModule.h				Sources)
 
-add_library (ZEDebug ${Sources})
-set_property(TARGET ZEDebug PROPERTY FOLDER "Zinek Engine")
+#add_library (ZEDebug ${Sources})
+#set_property(TARGET ZEDebug PROPERTY FOLDER "Zinek Engine")
