--- a/Source/ZEGraphics/CMakeLists.txt
+++ b/Source/ZEGraphics/CMakeLists.txt
@@ -50,6 +50,8 @@ add_source (ZEFixedMaterial.cpp 			Sources)
 add_source (ZEFixedMaterial.h 				Sources ZESDK ZEPP)
 add_source (ZEFrameRenderer.cpp 			Sources)
 add_source (ZEFrameRenderer.h 				Sources ZESDK)
+add_source (ZEGraphicsDebugModule.cpp       Sources)
+add_source (ZEGraphicsDebugModule.h         Sources)
 add_source (ZEGraphicsModule.cpp 			Sources)
 add_source (ZEGraphicsModule.h 				Sources ZESDK ZEPP)
 add_source (ZEIndexedPolygon.h 				Sources ZESDK)
