--- a/Source/ZEModel/CMakeLists.txt
+++ b/Source/ZEModel/CMakeLists.txt
@@ -43,6 +43,8 @@ add_source (ZEModelAnimationTrack.cpp	Sources)
 add_source (ZEModelAnimationTrack.h		Sources ZESDK)
 add_source (ZEModelBone.cpp				Sources)
 add_source (ZEModelBone.h				Sources ZESDK)
+add_source (ZEModelDebugModule.cpp      Sources)
+add_source (ZEModelDebugModule.h        Sources)
 add_source (ZEModelFileFormat.cpp		Sources)
 add_source (ZEModelFileFormat.h			Sources)
 add_source (ZEModelMesh.cpp				Sources)
