--- a/Source/ZESound/CMakeLists.txt
+++ b/Source/ZESound/CMakeLists.txt
@@ -43,6 +43,8 @@ add_source (ZEListener.h				Sources ZESDK ZEPP)
 add_source (ZESoundFX.h					Sources ZESDK)
 add_source (ZESoundModule.cpp			Sources)
 add_source (ZESoundModule.h				Sources ZESDK)
+add_source (ZESoundDebugModule.cpp		Sources)
+add_source (ZESoundDebugModule.h		Sources)
 add_source (ZESoundResource.cpp			Sources)
 add_source (ZESoundResource.h			Sources ZESDK ZEPP)
 add_source (ZESoundResourceMP3.cpp		Sources)
