--- a/ZE3dsMax/ZE3dsMapExporter/CMakeLists.txt
+++ b/ZE3dsMax/ZE3dsMapExporter/CMakeLists.txt
@@ -46,8 +46,23 @@ add_source (ZE3dsMapExporterOptions.h			Sources)
 add_source (ZE3dsMapExporterOptions.cpp			Sources)
 add_source (ZE3dsMapExporterResources.rc		Sources)
 add_source (ZE3dsMapExporterResources.h			Sources)
+add_source (ZE3dsMapExporter.def				Sources)
+add_source (../ZE3dsProgressDialog/ZE3dsProgressDialogResources.rc				Sources)
 
 add_library (ZE3dsMapExporter SHARED ${Sources})
 target_link_libraries (ZE3dsMapExporter ZETMapFile ZEToolSDK ZE3dsProgressDialog ZEDS ZEMath)
-target_link_libraries (ZE3dsMapExporter core.lib geom.lib gfx.lib mesh.lib maxutil.lib maxscrpt.lib paramblk2.lib igame.lib )
-set_property(TARGET ZE3dsMapExporter PROPERTY FOLDER "ZE3dsMax")
+target_link_libraries (ZE3dsMapExporter core.lib geom.lib gfx.lib mesh.lib maxutil.lib maxscrpt.lib paramblk2.lib igame.lib)
+
+set_property (TARGET ZE3dsMapExporter PROPERTY FOLDER "ZE3dsMax")
+set_property (TARGET ZE3dsMapExporter PROPERTY SUFFIX ".dle")
+set_property (TARGET ZE3dsMapExporter PROPERTY CLEAN_DIRECT_OUTPUT 1)
+
+set (LOCAL_WARNING_FLAGS /W3)
+set (LOCAL_RTTI_FLAGS /GR)
+	
+set (MAX_BINARY_DIRECTORY "C:\\Program Files (x86)\\Autodesk\\3ds Max 2010")
+get_property(TargetPath TARGET ZE3dsMapExporter PROPERTY LOCATION)
+file(TO_NATIVE_PATH ${TargetPath} NativeTargetPath)
+add_custom_command (TARGET ZE3dsMapExporter POST_BUILD COMMAND copy "${NativeTargetPath}" "${MAX_BINARY_DIRECTORY}\\plugins")
+
+install (TARGETS ZE3dsMapExporter CONFIGURATIONS Release COMPONENT "3ds Max Exporters" DESTINATION "Exporters/3dsMax")
