--- a/Source/ZECore/CMakeLists.txt
+++ b/Source/ZECore/CMakeLists.txt
@@ -47,6 +47,8 @@ add_source (ZEConsoleWindow.cpp			Sources)
 add_source (ZEConsoleWindow.h			Sources ZESDK)
 add_source (ZECore.cpp					Sources)
 add_source (ZECore.h					Sources ZESDK)
+add_source (ZEDebugModule.cpp			Sources)
+add_source (ZEDebugModule.h				Sources ZESDK)
 add_source (ZEError.cpp					Sources)
 add_source (ZEError.h					Sources ZESDK)
 add_source (ZEModule.cpp				Sources)
