svn path=/trunk/; revision=470

--- a/Source/ZEGame/CMakeLists.txt
+++ b/Source/ZEGame/CMakeLists.txt
@@ -67,6 +67,8 @@ add_source (ZEScene.cpp				Sources)
 add_source (ZEScene.h				Sources ZESDK)
 add_source (ZESceneDebugDraw.cpp	Sources)
 add_source (ZESceneDebugDraw.h		Sources ZESDK)
+add_source (ZESceneCuller.cpp		Sources)
+add_source (ZESceneCuller.h			Sources ZESDK)
 add_source (ZESerialization.cpp		Sources)
 add_source (ZESerialization.h		Sources ZESDK)
 add_source (ZESkyBrush.cpp			Sources)
