--- a/ZEditor/ZEDBrowser/CMakeLists.txt
+++ b/ZEditor/ZEDBrowser/CMakeLists.txt
@@ -37,27 +37,25 @@ cmake_minimum_required (VERSION 2.8)
 
 include(${QT_USE_FILE})
 
-add_source (NewZEDAssertBrowser.cpp		Sources)
-add_source (NewZEDAssertBrowser.h		Sources QtMocs)
-add_source (NewZEDAssertBrowserItem.cpp		Sources)
-add_source (NewZEDAssertBrowserItem.h		Sources QtMocs)
-add_source (ZEDAssertBrowser.cpp		Sources)
-add_source (ZEDAssertBrowser.h			Sources QtMocs)
-add_source (ZEDAssertBrowser.ui			Sources QtUI)
+add_source (NewZEDAssertBrowser.cpp				Sources)
+add_source (NewZEDAssertBrowser.h				Sources QtMocs)
+add_source (NewZEDAssertBrowserItem.cpp			Sources)
+add_source (NewZEDAssertBrowserItem.h			Sources QtMocs)
+add_source (ZEDAssertBrowser.ui					Sources QtUI)
 add_source (ZEDAssertBrowserFontFilePlugIn.cpp	Sources)
 add_source (ZEDAssertBrowserFontFilePlugIn.h	Sources)
-add_source (ZEDAssertBrowserPlugIn.cpp		Sources)
-add_source (ZEDAssertBrowserPlugIn.h		Sources)
-add_source (ZEDAssertBrowserViewPortItem.cpp	Sources)
-add_source (ZEDAssertBrowserViewPortItem.h	Sources)
-add_source (ZEDImageFilePlugIn.cpp		Sources)
-add_source (ZEDImageFilePlugIn.h		Sources)
-add_source (ZEDMapFilePlugIn.cpp		Sources)
-add_source (ZEDMapFilePlugIn.h			Sources)
-add_source (ZEDModelFilePlugIn.cpp		Sources)
-add_source (ZEDModelFilePlugIn.h		Sources)
-add_source (ZEDSceneFilePlugIn.cpp		Sources)
-add_source (ZEDSceneFilePlugIn.h		Sources)
+add_source (ZEDAssertBrowserPlugIn.cpp			Sources)
+add_source (ZEDAssertBrowserPlugIn.h			Sources)
+add_source (ZEDImageFilePlugIn.cpp				Sources)
+add_source (ZEDImageFilePlugIn.h				Sources)
+add_source (ZEDMapFilePlugIn.cpp				Sources)
+add_source (ZEDMapFilePlugIn.h					Sources)
+add_source (ZEDModelFilePlugIn.cpp				Sources)
+add_source (ZEDModelFilePlugIn.h				Sources)
+add_source (ZEDSceneFilePlugIn.cpp				Sources)
+add_source (ZEDSceneFilePlugIn.h				Sources)
+
+include_directories (${CMAKE_CURRENT_BINARY_DIR})
 
 qt4_add_resources (QtResourceFiles ${QtResources})
 qt4_wrap_ui (QtUIFiles ${QtUI})
