svn path=/trunk/; revision=476

--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -11,9 +11,9 @@ PhysicsModule = PhysX
 GameModule = TestGame
 
 [Graphics]
-ScreenWidth = 1920
-ScreenHeight = 1080
-Fullscreen = true
+ScreenWidth = 1024
+ScreenHeight = 768
+Fullscreen = false
 VerticalSync = false
 Antialiasing = 1
 AnisotropicFilter = 0
