--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -37,8 +37,10 @@ cmake_minimum_required (VERSION 2.8)
 
 project (ZinekEngine)
 
-add_definitions (-DZE_DEBUG_ENABLED)
-add_definitions (-DZE_DEBUG_BREAK_ON_ERROR)
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+
+#add_definitions (-DZE_DEBUG_ENABLED)
+#add_definitions (-DZE_DEBUG_BREAK_ON_ERROR)
 #add_definitions (-DZE_DEBUG_BREAK_ON_WARNING)
 #add_definitions (-DZE_DEBUG_ENABLE_MEMORY_CHECKS)
 
@@ -55,7 +57,7 @@ include_directories (
 	${PROJECT_SOURCE_DIR}/../Include/Curl
 	${PROJECT_SOURCE_DIR}/../ZEFoundation)
 link_directories(
-	"${PROJECT_SOURCE_DIR}/../Lib/Win x86/Debug" 
+	"${PROJECT_SOURCE_DIR}/../Lib/Win x86/$(ConfigurationName)" 
 	"${PROJECT_SOURCE_DIR}/../Lib/Win x86/DirectX" 
 	"${PROJECT_SOURCE_DIR}/../Lib/Win x86/OpenAL" 
 	"${PROJECT_SOURCE_DIR}/../Lib/Win x86/PhysX")
@@ -90,11 +92,14 @@ add_source (ZETypes.h				Sources ZESDK)
 add_source (ZECore/ZEWindowResources.rc	Sources)
 
 add_executable (ZE WIN32 ${Sources})
-set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 set_property(TARGET ZE PROPERTY FOLDER "Zinek Engine")
-
 target_link_libraries (ZE ZECore ZEDS ZEGame ZEGraphics ZEInput ZEMap ZEMath ZEMeta ZEModel ZEParticle ZEPhysics ZESound ZEUI)
 target_link_libraries (ZE ZEDirect3D9 ZEWindowsInput ZEDirectInput ZEDirectSound ZEOpenAL ZEPhysX ZEDummyInput ZEVirtualInput ZEPortalMap)
+
+add_library(ZESDK ${Sources})
+set_property(TARGET ZESDK PROPERTY FOLDER "Zinek Engine")
+target_link_libraries (ZESDK ZECore ZEDS ZEGame ZEGraphics ZEInput ZEMap ZEMath ZEMeta ZEModel ZEParticle ZEPhysics ZESound ZEUI)
+target_link_libraries (ZESDK ZEDirect3D9 ZEWindowsInput ZEDirectInput ZEDirectSound ZEOpenAL ZEPhysX ZEDummyInput ZEVirtualInput ZEPortalMap)
 
 get_property(TargetPath TARGET ZE PROPERTY LOCATION)
 file(TO_NATIVE_PATH ${TargetPath} NativeTargetPath)
