--- a/Source/ZEGraphics/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEGraphics/ZEDirect3D9/CMakeLists.txt
@@ -50,7 +50,7 @@ add_source (ZED3D9FixedMaterial.h			Sources)
 add_source (ZED3D9FrameRenderer.cpp			Sources)
 add_source (ZED3D9FrameRenderer.h			Sources)
 add_source (ZED3D9HDRProcessor.cpp			Sources)
-add_source (ZED3D9HDRProcessor.h			Sources)
+add_source (ZED3D9HDRProcessor.h			Sources ZEPP)
 add_source (ZED3D9Module.cpp				Sources)
 add_source (ZED3D9Module.h					Sources)
 add_source (ZED3D9ModuleDescription.cpp		Sources)
